--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <dependencies>
         <dependency>
             <groupId>info.cukes</groupId>
-            <artifactId>cucumber-picocontainer</artifactId>
+            <artifactId>cucumber-java</artifactId>
             <version>1.1.5</version>
             <scope>test</scope>
         </dependency>
@@ -19,12 +19,6 @@
             <groupId>info.cukes</groupId>
             <artifactId>cucumber-junit</artifactId>
             <version>1.1.5</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.picocontainer</groupId>
-            <artifactId>picocontainer</artifactId>
-            <version>2.14.3</version>
             <scope>test</scope>
         </dependency>
         <dependency>
