--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,13 @@
             <version>4.11</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-firefox-driver</artifactId>
+            <version>2.40.0</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
