--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,13 @@
             <version>4.11</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>info.cukes</groupId>
+            <artifactId>cucumber-pro</artifactId>
+            <version>1.0.10</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
