--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,6 @@
 	<packaging>jar</packaging>
 	<name>Cucumber-Java Skeleton</name>
 
-	<properties>
-		<java.version>1.7</java.version>
-		<maven.compiler.version>3.3</maven.compiler.version>
-	</properties>
-
 	<dependencies>
 		<dependency>
 			<groupId>info.cukes</groupId>
@@ -34,6 +29,13 @@
 			<version>RELEASE</version>
 			<scope>test</scope>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.hamcrest</groupId>
+			<artifactId>hamcrest-all</artifactId>
+			<version>RELEASE</version>
+			<scope>test</scope>
+		</dependency>
 
 		<dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
@@ -49,23 +51,7 @@
 			<groupId>org.seleniumhq.selenium</groupId>
 			<artifactId>selenium-chrome-driver</artifactId>
 			<version>RELEASE</version>
-		</dependency>
-		
+		</dependency>		
 	</dependencies>
 
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>${maven.compiler.version}</version>
-				<configuration>
-					<encoding>UTF-8</encoding>
-					<source>${java.version}</source>
-					<target>${java.version}</target>
-					<compilerArgument>-Werror</compilerArgument>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
 </project>
