--- a/build.xml
+++ b/build.xml
@@ -2,24 +2,24 @@
     <property name="repo" value="https://repo1.maven.org/maven2"/>
 
     <!-- To figure out compatible combinations of versions, you should examine dependencies in the Maven POM files -->
-    <property name="cucumber-jvm.version" value="1.2.5"/>
-    <property name="cucumber-jvm-deps.version" value="1.0.5"/>
-    <property name="gherkin.version" value="2.12.2"/>
-    <property name="cucumber-html.version" value="0.2.3"/>
+    <property name="cucumber-jvm.version" value="2.0.0"/>
+    <property name="cucumber-jvm-deps.version" value="1.0.6"/>
+    <property name="gherkin.version" value="4.1.3"/>
+    <property name="cucumber-html.version" value="0.2.6"/>
     <property name="junit.version" value="4.12"/>
     <property name="jars" value="lib"/>
 
     <target name="download">
         <mkdir dir="${jars}"/>
-        <get src="${repo}/info/cukes/cucumber-core/${cucumber-jvm.version}/cucumber-core-${cucumber-jvm.version}.jar"
+        <get src="${repo}/io/cucumber/cucumber-core/${cucumber-jvm.version}/cucumber-core-${cucumber-jvm.version}.jar"
              dest="${jars}/cucumber-core-${cucumber-jvm.version}.jar"/>
-        <get src="${repo}/info/cukes/cucumber-java/${cucumber-jvm.version}/cucumber-java-${cucumber-jvm.version}.jar"
+        <get src="${repo}/io/cucumber/cucumber-java/${cucumber-jvm.version}/cucumber-java-${cucumber-jvm.version}.jar"
              dest="${jars}/cucumber-java-${cucumber-jvm.version}.jar"/>
-        <get src="${repo}/info/cukes/cucumber-junit/${cucumber-jvm.version}/cucumber-junit-${cucumber-jvm.version}.jar"
+        <get src="${repo}/io/cucumber/cucumber-junit/${cucumber-jvm.version}/cucumber-junit-${cucumber-jvm.version}.jar"
              dest="${jars}/cucumber-junit-${cucumber-jvm.version}.jar"/>
-        <get src="${repo}/info/cukes/cucumber-jvm-deps/${cucumber-jvm-deps.version}/cucumber-jvm-deps-${cucumber-jvm-deps.version}.jar"
+        <get src="${repo}/io/cucumber/cucumber-jvm-deps/${cucumber-jvm-deps.version}/cucumber-jvm-deps-${cucumber-jvm-deps.version}.jar"
              dest="${jars}/cucumber-jvm-deps-${cucumber-jvm-deps.version}.jar"/>
-        <get src="${repo}/info/cukes/gherkin/${gherkin.version}/gherkin-${gherkin.version}.jar"
+        <get src="${repo}/io/cucumber/gherkin/${gherkin.version}/gherkin-${gherkin.version}.jar"
              dest="${jars}/gherkin-${gherkin.version}.jar"/>
         <get src="${repo}/info/cukes/cucumber-html/${cucumber-html.version}/cucumber-html-${cucumber-html.version}.jar"
              dest="${jars}/cucumber-html-${cucumber-html.version}.jar"/>
