--- a/pom.xml
+++ b/pom.xml
@@ -11,20 +11,20 @@
     <properties>
         <java.version>1.7</java.version>
         <junit.version>4.12</junit.version>
-        <cucumber.version>1.2.5</cucumber.version>
+        <cucumber.version>2.0.0</cucumber.version>
         <maven.compiler.version>3.3</maven.compiler.version>
     </properties>
 
     <dependencies>
         <dependency>
-            <groupId>info.cukes</groupId>
+            <groupId>io.cucumber</groupId>
             <artifactId>cucumber-java</artifactId>
             <version>${cucumber.version}</version>
             <scope>test</scope>
         </dependency>
 
         <dependency>
-            <groupId>info.cukes</groupId>
+            <groupId>io.cucumber</groupId>
             <artifactId>cucumber-junit</artifactId>
             <version>${cucumber.version}</version>
             <scope>test</scope>
