Add Cucumber Pro config (only activated in CI)

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,5 @@
 language: java
+env:
+  global:
+    # CUCUMBERPRO_RESULTS_TOKEN
+    secure: PO4VYxh2MhiaprCiVvIcofW4yso+zk9hrDQgvP+vZIL8knd5nvIpumjFqDdAKD9lfy8vlJMWvG2px3JdlgUPkstt2QknqjsPo8EAGckYiyCVXGvvtsB1xZrvNK3/wwRV6McoLl4L6b0OTlQhCQclqFdaqejQgSDmeRFDEtUMywk=
