--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <java.version>1.7</java.version>
         <junit.version>4.12</junit.version>
         <cucumber.version>2.3.1</cucumber.version>
+        <cucumber.pro.version>2.0.4</cucumber.pro.version>
         <maven.compiler.version>3.3</maven.compiler.version>
     </properties>
 
@@ -27,6 +28,13 @@
             <groupId>io.cucumber</groupId>
             <artifactId>cucumber-junit</artifactId>
             <version>${cucumber.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>io.cucumber</groupId>
+            <artifactId>pro-plugin</artifactId>
+            <version>${cucumber.pro.version}</version>
             <scope>test</scope>
         </dependency>
 
