--- a/build.gradle
+++ b/build.gradle
@@ -1,18 +1,4 @@
-buildscript {
-    repositories {
-        maven {
-            url "https://plugins.gradle.org/m2/"
-        }
-    }
-    dependencies {
-        classpath "com.commercehub:gradle-cucumber-jvm-plugin:0.13"
-    }
-}
-
-plugins {
-    id 'java'
-    id 'com.commercehub.cucumber-jvm' version '0.13'
-}
+apply plugin: 'java'
 
 project.ext {
     cucumberVersion = '2.3.1'
@@ -29,16 +15,4 @@ dependencies {
 
 repositories {
     mavenCentral()
-}
-
-addCucumberSuite 'test'
-
-cucumber {
-    maxParallelForks = 3
-}
-
-test {
-    stepDefinitionRoots = ['skeleton']
-    featureRoots = ['skeleton']
-    plugins = ['io.cucumber.pro.JsonReporter:full-gradle']
 }
