--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,12 @@
 language: java
 jdk: oraclejdk8
 
+before_script:
+  - chmod +x gradlew
+
+script:
+  - ./gradlew check
+  - ./gradlew jacocoTestReport
+
 after_success:
   - bash <(curl -s https://codecov.io/bash)
