--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,10 @@ jdk: oraclejdk8
 before_script:
   - chmod +x gradlew
 
-script:
-  - ./gradlew check
-  - ./gradlew jacocoTestReport
+-env:
+-  global:
+-    # CUCUMBERPRO_RESULTS_TOKEN
+-    secure: PO4VYxh2MhiaprCiVvIcofW4yso+zk9hrDQgvP+vZIL8knd5nvIpumjFqDdAKD9lfy8vlJMWvG2px3JdlgUPkstt2QknqjsPo8EAGckYiyCVXGvvtsB1xZrvNK3/wwRV6McoLl4L6b0OTlQhCQclqFdaqejQgSDmeRFDEtUMywk=
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
