--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,14 @@
     <version>0.0.1</version>
     <packaging>jar</packaging>
     <name>Cucumber-Java Skeleton</name>
+	
+	<groupId>org.jacoco</groupId>
+	<artifactId>org.jacoco.examples.maven.java</artifactId>
+	<version>1.0-SNAPSHOT</version>
+	<packaging>jar</packaging>
+
+	<name>JaCoCo Maven plug-in example for Java project</name>
+	<url>http://www.eclemma.org/jacoco</url>
 
     <properties>
         <java.version>1.8</java.version>
@@ -44,6 +52,8 @@
             <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
+		
+		
     </dependencies>
 
     <build>
@@ -61,4 +71,29 @@
             </plugin>
         </plugins>
     </build>
+	
+	<build>
+		<sourceDirectory>src/main/java</sourceDirectory>
+		<plugins>
+			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<version>0.7.9</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>prepare-agent</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>report</id>
+						<phase>test</phase>
+						<goals>
+							<goal>report</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
 </project>
