Added testLogging to Gradle

--- a/build.gradle
+++ b/build.gradle
@@ -16,3 +16,10 @@ dependencies {
 repositories {
     mavenCentral()
 }
+
+test {
+    testLogging {
+        events "passed", "skipped", "failed"
+        exceptionFormat "full"
+    }
+}
