Codecov not working

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ jdk:
 
 script:
     ./gradlew check
+    ./gradlew jacocoTestReport
 
 after_success:
-    - bash <(curl -s https://codecov.io/bash)
+    bash <(curl -s https://codecov.io/bash)
