Update to Gradle 5.5
Replace deprecated dependency configuration `testCompile` with
`testImplementation`, see Gradle documentation
https://docs.gradle.org/current/userguide/java_plugin.html#tab:configurations

--- a/build.gradle
+++ b/build.gradle
@@ -5,8 +5,8 @@ project.ext {
 }
 
 dependencies {
-    testCompile 'io.cucumber:cucumber-java:' + cucumberVersion
-    testCompile 'io.cucumber:cucumber-junit:' + cucumberVersion
+    testImplementation 'io.cucumber:cucumber-java:' + cucumberVersion
+    testImplementation 'io.cucumber:cucumber-junit:' + cucumberVersion
 }
 
 repositories {
