--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,8 @@
         <java.version>1.8</java.version>
         <junit.version>4.13</junit.version>
         <cucumber.version>5.2.0</cucumber.version>
-        <maven.compiler.version>3.3</maven.compiler.version>
+        <maven.compiler.version>3.8.1</maven.compiler.version>
+        <maven.surefire.version>2.22.1</maven.surefire.version>
     </properties>
 
     <dependencies>
@@ -49,6 +50,11 @@
                     <source>${java.version}</source>
                     <target>${java.version}</target>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>${maven.surefire.version}</version>
             </plugin>
         </plugins>
     </build>
