--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,11 @@
 language: java
 
-script:
-  mvn test -Dmaven.test.failure.ignore
+cache:
+   directories:
+      - "$HOME/.m2"
 
+script:
+   - ./mvnw test -Dmaven.test.failure.ignore
+   - grep -q "The step \"I wait 1 hour\" is undefined." target/surefire-reports/io.cucumber.skeleton.RunCucumberTest.txt || ( echo "mvn test didn't fail as expected" && false )
+   - ./gradlew test || true
+   - grep -q "The step &quot;I wait 1 hour&quot; is undefined." build/reports/tests/test/classes/Belly.html  || ( echo "gradle test didn't fail as expected" && false )
