Improve first time user experience
 - Limit classpath scanning to `io.cucumber.skeleton` by setting the glue path.
   This avoids warnings about missing classes on Eclipse.
 - Quite Cucumber Publish plugin. The output on std-err is distracting from the
   message about missing step definitions.

--- a/src/test/resources/junit-platform.properties
+++ b/src/test/resources/junit-platform.properties
@@ -1,2 +1,2 @@
-# Change this to true to disable the Cucumber Reports banner
-cucumber.publish.quiet=false
+# Change this to false to display the Cucumber Reports banner
+cucumber.publish.quiet=true
