--- a/maven/src/test/resources/junit-platform.properties
+++ b/maven/src/test/resources/junit-platform.properties
@@ -1,2 +1,2 @@
-# Change this to false to display the Cucumber Reports banner
-cucumber.publish.quiet=true
+# Cucumber searches this package for your step definitions, ect
+cucumber.glue=io.cucumber.skeleton
